Closed Bug 1192787 Opened 11 years ago Closed 10 years ago

nsPerformanceTiming::ResponseEndHighRes() does not check whether performance timing is enabled

Categories

(Core :: DOM: Core & HTML, defect)

38 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: gk, Assigned: qdot)

References

Details

(Keywords: regression)

Attachments

(1 file)

Looking at https://hg.mozilla.org/mozilla-central/rev/9b0c94f564f3 it seems the check whether performance timing is enabled got removed by accident. This broke actually one of our tests.
Assignee: nobody → kyle
Not sure why this got removed in the original patch. Fix seems to pass w-p-ts and mochis.
Attachment #8646011 - Flags: review?(amarchesini)
Attachment #8646011 - Attachment description: 0001-Bug-1192787-Readd-performance-enabled-test-to-Respon.patch → Patch 1 (v1) - Readd performance enabled test to ResponseEndHighRes
Comment on attachment 8646011 [details] [diff] [review] Patch 1 (v1) - Readd performance enabled test to ResponseEndHighRes Review of attachment 8646011 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/base/nsPerformance.cpp @@ +348,4 @@ > DOMHighResTimeStamp > nsPerformanceTiming::ResponseEndHighRes() > { > + if (!nsContentUtils::IsPerformanceTimingEnabled() || !IsInitialized()) { 80chars max.
Attachment #8646011 - Flags: review?(amarchesini) → review+
My count shows 74 chars for that line. :)
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: