Bug 1192787 - Readd performance enabled test to ResponseEndHighRes; r=baku